ecmascript/parser/tests/typescript-errors/type-only-import-specifier/invalid-type-only/input.ts
import { type import } from 'mod'
