ecmascript/parser/tests/typescript-errors/type-only-import-specifier/invalid-type-only/input.ts.stderr
error: cannot import as reserved word
 --> $DIR/tests/typescript-errors/type-only-import-specifier/invalid-type-only/input.ts:1:15
  |
1 | import { type import } from 'mod'
  |               ^^^^^^

